# AKSurroundDelay

./: .gitignore  CMakeLists.txt  README.md  generate_color_cache.cpp  runStandalone.txt  slapper_complete_spec.md
.github/: copilot-instructions.md
Source/: ColorPalette.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginEditor_old.cpp  PluginProcessor.cpp  PluginProcessor.h  PositionControlGroup.cpp  PositionControlGroup.h  ResizeHandle.h  SVGComponents.cpp  SVGComponents.h  SecondaryControl.cpp  SecondaryControl.h  SliderModule.cpp  SliderModule.h  SurroundStageView.cpp  SurroundStageView.h  SyncNoteValue.h  TapPanel.cpp  TapPanel.h  TextStyles.h  ViewPresetSelector.cpp  ViewPresetSelector.h
